# ld-so-daemon

./: .clang-format  README.md  generator.py  generator.sh  hello_world.c  hello_world_lib.c  hello_world_lib.h  ld-so-client.c  ld-so-protocol.h  ld-so-server.c  meson.build
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  coveralls.yml  dependency-review.yml  flawfinder-analysis.yml  scorecards.yml  sha-pin-check.yml
LICENSES/: BSD-3-Clause
